# docx-automater

./: .env  .gitignore  Cargo.toml  README.md  data_manager.py  main.py  package-lock.json  package.json  stopwatch.tcss  style.tcss
.termdbms/: .13572433931113926125
db/: db
migrations/2023-09-19-012355_create_aggression_actions/: down.sql  up.sql
src/: app_state.rs  counter.rs  letter_counter.rs  lib.rs  main.rs  messages.rs  model.rs  models.rs  schema.rs
src-tauri/: tauri.conf.json
src/components/: container.rs  generics.tsx  label.rs  mod.rs  signalements.tsx
src/components/controls/: buttons.tsx
src/pages/: _app.tsx  index.tsx
src/styles/: globals.css
src/testing/: label.rs  letter_counter.rs  mod.rs  model.rs
