[package]
name = "docx-automater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui-realm-stdlib = "1.3.0"
tuirealm = { version = "^1.9.0", default-features = false, features = ["ratatui", "derive", "crossterm"] }
