[package]
name = "docx-automater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
rusqlite = { version = "0.29.0", features = ["bundled"] }
tui-realm-stdlib = "1.3.0"
tuirealm = { version = "^1.9.0", default-features = false, features = ["ratatui", "derive", "crossterm"] }
